Removed unused RSWires.zs file

--- a/config/AppliedEnergistics2/Facades.cfg
+++ b/config/AppliedEnergistics2/Facades.cfg
@@ -1,5 +1,227 @@
 # Configuration file
 
+aether {
+    B:aercloud=false
+    B:aercloud.1=false
+    B:aercloud.2=false
+    B:aercloud.3=false
+    B:aercloud.4=false
+    B:aercloud.5=false
+    B:aethercraftingtable=true
+    B:aetherdirt=true
+    B:aetherdirt.1=true
+    B:aetherflower=false
+    B:aetherflower.1=false
+    B:aetherflower.2=false
+    B:aetherflower.3=false
+    B:aethergrass=false
+    B:aethergrass.1=false
+    B:aethergrass.2=false
+    B:aethergrass.3=false
+    B:aethergrass.4=false
+    B:aetherportal=false
+    B:aethersapling=false
+    B:aethersapling.1=false
+    B:aethersapling.2=false
+    B:aethersapling.3=false
+    B:aetherteleporter=false
+    B:agiosite=true
+    B:agiositebrick=true
+    B:agiositebrickdecorative=true
+    B:agiositebrickdecorative.1=true
+    B:agiositebrickdecorative.2=true
+    B:agiositebrickdecorative.3=true
+    B:agiositebrickdecorative.4=true
+    B:agiositebrickdecorative.5=true
+    B:agiositebrickslab=false
+    B:agiositebrickstairs=false
+    B:agiositepillar=true
+    B:agiositeslab=false
+    B:agiositestairs=false
+    B:altar=false
+    B:ambrosiumore=true
+    B:ambrosiumtorch=false
+    B:arkeniumdoor=false
+    B:arkeniumore=true
+    B:blueberrybush=false
+    B:blueberrybush.1=false
+    B:bluedarkskyrootleaves=false
+    B:bluelightskyrootleaves=false
+    B:blueskyrootleaves=false
+    B:brettlplant=false
+    B:cloudwoolblock=true
+    B:cloudwoolcarpet=false
+    B:crudescatterglass=false
+    B:crudescatterglassdecorative=false
+    B:crudescatterglassdecorative.1=false
+    B:crudescatterglasspane=false
+    B:crudescatterglasspanedecorative=false
+    B:crudescatterglasspanedecorative.1=false
+    B:darkbluedarkskyrootleaves=false
+    B:darkbluelightskyrootleaves=false
+    B:darkblueskyrootleaves=false
+    B:darkskyrootlog=true
+    B:darkskyrootplanks=true
+    B:fadedholystonebrick=true
+    B:fadedholystonebrickdecorative=true
+    B:fadedholystonebrickdecorative.1=true
+    B:fadedholystonebrickdecorative.2=true
+    B:fadedholystonebrickdecorative.3=true
+    B:fadedholystonebrickdecorative.4=true
+    B:fadedholystonebrickdecorative.5=true
+    B:fadedholystonebrickdecorative.6=true
+    B:fadedholystonebrickslab=false
+    B:fadedholystonebrickstairs=false
+    B:fadedholystonepillar=true
+    B:ferrosite=true
+    B:ferrositesand=true
+    B:goldenoakleaves=false
+    B:goldenoaklog=true
+    B:gravititeblock=true
+    B:gravititeore=true
+    B:greendarkskyrootleaves=false
+    B:greenlightskyrootleaves=false
+    B:greenskyrootleaves=false
+    B:highlandsice=false
+    B:highlandspackedice=true
+    B:highlandssnow=false
+    B:highlandssnowlayer=false
+    B:holystone=true
+    B:holystone.1=true
+    B:holystonebookshelf=true
+    B:holystonebrick=true
+    B:holystonebrickdecorative=true
+    B:holystonebrickdecorative.1=true
+    B:holystonebrickdecorative.2=true
+    B:holystonebrickdecorative.3=true
+    B:holystonebrickdecorative.4=true
+    B:holystonebrickdecorative.5=true
+    B:holystonebrickdecorative.6=true
+    B:holystonebrickslab=false
+    B:holystonebrickstairs=false
+    B:holystonebrickwall=false
+    B:holystonebutton=false
+    B:holystonefurnace=false
+    B:holystonepillar=true
+    B:holystonepressureplate=false
+    B:holystonerock=false
+    B:holystoneslab=false
+    B:holystonestairs=false
+    B:holystonewall=false
+    B:icestonebricks=true
+    B:icestonebricksdecorative=true
+    B:icestonebricksdecorative.1=true
+    B:icestonebricksdecorative.2=true
+    B:icestonebricksdecorative.3=true
+    B:icestonebricksdecorative.4=true
+    B:icestonebricksdecorative.5=true
+    B:icestonebrickstairs=false
+    B:icestonecooler=false
+    B:icestoneore=true
+    B:icestonepillar=true
+    B:icestoneslab=false
+    B:icestonewall=false
+    B:incubator=false
+    B:lightskyrootbeam=true
+    B:lightskyrootdecorative=true
+    B:lightskyrootdecorative.1=true
+    B:lightskyrootdecorative.2=true
+    B:lightskyrootdecorative.3=true
+    B:lightskyrootdecorative.4=true
+    B:lightskyrootdecorative.5=true
+    B:lightskyrootdecorative.6=true
+    B:lightskyrootdecorative.7=true
+    B:lightskyrootlog=true
+    B:lightskyrootplanks=true
+    B:masonrybench=false
+    B:moaegg=false
+    B:mossyholystoneslab=false
+    B:mossyholystonestairs=false
+    B:mossyholystonewall=false
+    B:multiblockdummy=false
+    B:multiblockdummyhalf=false
+    B:orangetree=false
+    B:outpostcampfire=false
+    B:present=false
+    B:quicksoil=true
+    B:quicksoilglass=false
+    B:quicksoilglassdecorative=false
+    B:quicksoilglassdecorative.1=false
+    B:quicksoilglasspane=false
+    B:quicksoilglasspanedecorative=false
+    B:quicksoilglasspanedecorative.1=false
+    B:rustedferrosite=true
+    B:scatterglass=false
+    B:scatterglassdecorative=false
+    B:scatterglassdecorative.1=false
+    B:scatterglasspane=false
+    B:scatterglasspanedecorative=false
+    B:scatterglasspanedecorative.1=false
+    B:scatterglassslab=false
+    B:scatterglassstairs=false
+    B:scatterglasswall=false
+    B:secretskyrootdoor=false
+    B:secretskyroottrapdoor=false
+    B:skyrootbeam=true
+    B:skyrootbed=false
+    B:skyrootbookshelf=true
+    B:skyrootbutton=false
+    B:skyrootchest=false
+    B:skyrootdecorative=true
+    B:skyrootdecorative.1=true
+    B:skyrootdecorative.2=true
+    B:skyrootdecorative.3=true
+    B:skyrootdecorative.4=true
+    B:skyrootdecorative.5=true
+    B:skyrootdecorative.6=true
+    B:skyrootdecorative.7=true
+    B:skyrootdoor=false
+    B:skyrootfence=false
+    B:skyrootfencegate=false
+    B:skyrootladder=false
+    B:skyrootlog=true
+    B:skyrootlogwall=false
+    B:skyrootplanks=true
+    B:skyrootpressureplate=false
+    B:skyrootslab=false
+    B:skyrootstairs=false
+    B:skyroottrapdoor=false
+    B:skyroottwigs=false
+    B:standingskyrootsign=false
+    B:tallaethergrass=false
+    B:tallaethergrass.1=false
+    B:tallaethergrass.2=false
+    B:theradirt=true
+    B:theragrass=false
+    B:therastonebrick=true
+    B:therastonebrickdecorative=true
+    B:therastonebrickdecorative.1=true
+    B:therastonebrickdecorative.2=true
+    B:therastonebrickdecorative.3=true
+    B:therastonebrickdecorative.4=true
+    B:therastonebrickdecorative.5=true
+    B:therastonebrickdecorative.6=true
+    B:therastonepillar=true
+    B:therawoodbeam=true
+    B:therawooddecorative=true
+    B:therawooddecorative.1=true
+    B:therawooddecorative.2=true
+    B:therawooddecorative.3=true
+    B:therawooddecorative.4=true
+    B:therawooddecorative.5=true
+    B:therawoodleaves=false
+    B:therawoodlog=true
+    B:therawoodplanks=true
+    B:valkyriegrass=false
+    B:valkyriegrass.2=false
+    B:wallskyrootsign=false
+    B:wildcard=false
+    B:wovensticks=true
+    B:zaniteblock=true
+    B:zaniteore=true
+}
+
+
 alternatingflux {
     B:connector=false
     B:connector.1=false
