--- a/config/chiselsandbits.cfg
+++ b/config/chiselsandbits.cfg
@@ -122,6 +122,39 @@ crafting {
     B:cofh.thermalfoundation.block.BlockStorageResource=true
     B:com.cout970.magneticraft.block.core.BlockBase=true
     B:com.digitalfeonix.hydrogel.block.BlockHydroGel=true
+    B:com.gildedgames.aether.common.blocks.construction.BlockRockGlass=true
+    B:com.gildedgames.aether.common.blocks.construction.BlockSkyrootPlanks=true
+    B:com.gildedgames.aether.common.blocks.construction.BlockTherawoodPlanks=true
+    B:com.gildedgames.aether.common.blocks.containers.BlockAetherCraftingTable=true
+    B:com.gildedgames.aether.common.blocks.decorative.BlockAgiositeDecorative=true
+    B:com.gildedgames.aether.common.blocks.decorative.BlockCustomPillar=true
+    B:com.gildedgames.aether.common.blocks.decorative.BlockFadedHolystoneDecorative=true
+    B:com.gildedgames.aether.common.blocks.decorative.BlockHolystoneDecorative=true
+    B:com.gildedgames.aether.common.blocks.decorative.BlockIcestoneBricksDecorative=true
+    B:com.gildedgames.aether.common.blocks.decorative.BlockLightSkyrootDecorative=true
+    B:com.gildedgames.aether.common.blocks.decorative.BlockSkyrootDecorative=true
+    B:com.gildedgames.aether.common.blocks.decorative.BlockTherastoneDecorative=true
+    B:com.gildedgames.aether.common.blocks.decorative.BlockTherawoodDecorative=true
+    B:com.gildedgames.aether.common.blocks.natural.BlockAetherDirt=true
+    B:com.gildedgames.aether.common.blocks.natural.BlockAetherLog=true
+    B:com.gildedgames.aether.common.blocks.natural.BlockCloudwoolBlock=true
+    B:com.gildedgames.aether.common.blocks.natural.BlockFerrosite=true
+    B:com.gildedgames.aether.common.blocks.natural.BlockFerrositeSand=true
+    B:com.gildedgames.aether.common.blocks.natural.BlockGoldenOakLog=true
+    B:com.gildedgames.aether.common.blocks.natural.BlockHolystone=true
+    B:com.gildedgames.aether.common.blocks.natural.BlockIcestoneBricks=true
+    B:com.gildedgames.aether.common.blocks.natural.BlockQuicksoil=true
+    B:com.gildedgames.aether.common.blocks.natural.BlockRustedFerrosite=true
+    B:com.gildedgames.aether.common.blocks.natural.BlockTheraDirt=true
+    B:com.gildedgames.aether.common.blocks.natural.ores.BlockAmbrosiumOre=true
+    B:com.gildedgames.aether.common.blocks.natural.ores.BlockArkeniumOre=true
+    B:com.gildedgames.aether.common.blocks.natural.ores.BlockGravititeOre=true
+    B:com.gildedgames.aether.common.blocks.natural.ores.BlockIcestoneOre=true
+    B:com.gildedgames.aether.common.blocks.natural.ores.BlockZaniteOre=true
+    B:com.gildedgames.aether.common.blocks.natural.plants.BlockWovenSticks=true
+    B:com.gildedgames.aether.common.blocks.util.BlockBuilder=true
+    B:com.gildedgames.aether.common.blocks.util.BlockCustomBookshelf=true
+    B:com.gildedgames.aether.common.blocks.util.BlockCustomPackedIce=true
     B:com.globbypotato.rockhounding_rocks.blocks.decos.RocksA=true
     B:com.globbypotato.rockhounding_rocks.blocks.decos.RocksB=true
     B:com.globbypotato.rockhounding_rocks.blocks.decos.RocksC=true
