--- a/config/jei/worldSettings.cfg
+++ b/config/jei/worldSettings.cfg
@@ -295,6 +295,14 @@ world167414058 {
 }
 
 
+world1812659617 {
+    B:cheatItemsEnabled=true
+    B:editEnabled=false
+    S:filterText=aether 
+    B:overlayEnabled=true
+}
+
+
 world1821167760 {
     # Give items instead of showing the recipe.
     B:cheatItemsEnabled=true
