Disabled Autoverse pipes
Implemented

--- a/config/jei/worldSettings.cfg
+++ b/config/jei/worldSettings.cfg
@@ -309,7 +309,7 @@ world1821167760 {
 
     # Hide and unhide items by clicking them in the ingredient list.
     B:editEnabled=false
-    S:filterText=
+    S:filterText=@autov
 
     # Show the list of ingredients next to open guis.
     B:overlayEnabled=true
