Disabled smeltery obsidian creation
Closed and implemented #417

--- a/config/tconstruct.cfg
+++ b/config/tconstruct.cfg
@@ -54,7 +54,7 @@ gameplay {
     B:enableClayCasts=true
 
     # Allows the creation of obsidian in the smeltery, using a bucket of lava and water.
-    B:obsidianAlloy=true
+    B:obsidianAlloy=false
 
     # Preferred mod ID for oredictionary outputs. Top most mod ID will be the preferred output ID, and if none is found the first output stack is used.
     S:orePreference <
