--- a/config/AppliedEnergistics2/Facades.cfg
+++ b/config/AppliedEnergistics2/Facades.cfg
@@ -8954,6 +8954,7 @@ plustic {
     B:plusticmoltenmanasteel=false
     B:plusticmoltenmirion=false
     B:plusticmoltenplatinum=false
+    B:plusticmoltenpsimetal=false
     B:plusticmoltensignalum=false
     B:plusticmoltenterrasteel=false
 }
@@ -9100,6 +9101,14 @@ prospects {
     B:flower.7=false
     B:flower.8=false
     B:flower.9=false
+}
+
+
+psi {
+    B:cadassembler=false
+    B:conjured=false
+    B:programmer=false
+    B:psidecorative=true
 }
 
 
