--- a/config/chiselsandbits.cfg
+++ b/config/chiselsandbits.cfg
@@ -460,6 +460,7 @@ crafting {
     B:vazkii.botania.common.block.decor.quartz.BlockSpecialQuartz=true
     B:vazkii.botania.common.block.mana.BlockAlchemyCatalyst=true
     B:vazkii.botania.common.block.mana.BlockConjurationCatalyst=true
+    B:vazkii.psi.common.block.BlockPsiDecorative=true
     B:vazkii.quark.building.block.BlockBark=true
     B:vazkii.quark.building.block.BlockCarvedWood=true
     B:vazkii.quark.building.block.BlockCharredNetherBricks=true
