--- a/config/plustic.cfg
+++ b/config/plustic.cfg
@@ -67,6 +67,12 @@ materials {
     # Set to false to prevent Platinum from being loaded [default: true]
     B:"Enable material platinum_plustic"=true
 
+    # Set to false to prevent Psigem from being loaded [default: true]
+    B:"Enable material psigem"=true
+
+    # Set to false to prevent Psimetal from being loaded [default: true]
+    B:"Enable material psimetal"=true
+
     # Set to false to prevent Ruby from being loaded [default: true]
     B:"Enable material ruby"=true
 
