Disabled Quark signs to fix SignPic issue

--- a/config/quark.cfg
+++ b/config/quark.cfg
@@ -287,7 +287,7 @@ client {
     B:"Food tooltip"=true
     B:"Greener grass"=true
     B:"Improved mount h u d"=true
-    B:"Improved sign edit"=true
+    B:"Improved sign edit"=false
     B:"Less intrusive shields"=true
     B:"Map tooltip"=true
     B:"No potion shift"=true
