Removed Dimensional Doors again

--- a/config/chiselsandbits.cfg
+++ b/config/chiselsandbits.cfg
@@ -396,6 +396,7 @@ crafting {
     B:org.cyclops.integrateddynamics.block.BlockMenrilLogFilled=true
     B:"org.cyclops.integrateddynamics.block.BlockMenrilPlanksConfig$1"=true
     B:org.dave.compactmachines3.block.BlockWallBreakable=true
+    B:org.dimdev.dimdoors.shared.blocks.BlockFabric=true
     B:prospector.traverse.blocks.base.BlockTraverse=true
     B:prospector.traverse.blocks.base.BlockTraverseWoodLog=true
     B:prospector.traverse.blocks.base.BlockTraverseWoodPlanks=true
@@ -442,6 +443,8 @@ crafting {
     B:thaumcraft.common.blocks.world.plants.BlockLogsTC=true
     B:therealfarfetchd.rswires.common.block.Lamp=true
     B:therealfarfetchd.rswires.common.block.LampInv=true
+    B:valkyrienwarfare.addon.control.block.BlockDopedEtherium=true
+    B:valkyrienwarfare.addon.world.block.BlockEtheriumOre=true
     B:vazkii.botania.common.block.BlockDreamwood=true
     B:vazkii.botania.common.block.BlockFelPumpkin=true
     B:vazkii.botania.common.block.BlockLivingrock=true
