--- a/config/vanillafix.cfg
+++ b/config/vanillafix.cfg
@@ -1,6 +1,7 @@
 # Configuration file
 
 crashes {
+    B:disableReturnToMainMenu=false
     I:errorNotificationDuration=30000
     S:hasteURL=https://paste.dimdev.org
     B:replaceErrorNotifications=false
@@ -15,6 +16,11 @@ crashes {
 
 
 fixes {
+    B:bugFixes=true
+    B:crashFixes=true
+    B:modSupport=true
+    B:profiler=true
+    B:textureFixes=true
 }
 
 
