--- a/config/terraqueous.cfg
+++ b/config/terraqueous.cfg
@@ -186,6 +186,7 @@ general {
                     terraqueous:item_main@215#2
                     terraqueous:item_main@215#4
                     terraqueous:item_main@215#4
+		    mekanism:dust@2#1
                  >
             }
 
@@ -248,6 +249,7 @@ general {
                     terraqueous:item_main@214#2
                     terraqueous:item_main@214#4
                     terraqueous:item_main@214#4
+		    mekanism:dust@2#1
                  >
             }
 
@@ -283,6 +285,7 @@ general {
                     terraqueous:item_main@216#2
                     terraqueous:item_main@216#4
                     terraqueous:item_main@216#4
+		    mekanism:dust@2#1
                  >
             }
 
