--- a/.gitignore
+++ b/.gitignore
@@ -68,3 +68,10 @@ config/randomtweaks/timeofdayoverlayworlds.json
 config/splash.properties
 config/worldedit/worldedit.properties
 config/randomtweaks/data.json
+config/worldedit/worldedit.properties
+config/splash.properties
+config/jei/worldSettings.cfg
+config/InvTweaks.cfg
+config/buildcraft/detailed.properties
+config/AppliedEnergistics2/aerecipes/items.csv
+config/AppliedEnergistics2/Facades.cfg
