--- a/config/chiselsandbits.cfg
+++ b/config/chiselsandbits.cfg
@@ -248,6 +248,9 @@ crafting {
     B:me.dmillerw.storage.block.BlockItemizer=true
     B:me.ichun.mods.ichunutil.common.block.BlockCompactPorkchop=true
     B:me.modmuss50.svw.blocks.BlockPortal=true
+    B:mekanism.common.block.BlockOre=true
+    B:mekanism.common.block.BlockPlastic=true
+    B:mekanism.common.block.BlockSalt=true
     B:mod.flatcoloredblocks.block.BlockFlatColored=true
     B:mod.flatcoloredblocks.block.BlockFlatColoredTranslucent=true
     B:mrtjp.projectred.exploration.BlockDecorativeStone=true
