--- a/config/factorytech.cfg
+++ b/config/factorytech.cfg
@@ -37,6 +37,9 @@ general {
     # Set to false to disable nickel ore generation [default: true]
     B:genNickel=false
 
+    # Number of items that the Dimensional Shifter can send using a single piece of Chorus Fruit [range: 0 ~ 576, default: 8]
+    I:itemsPerFruit=8
+
     # Maximum distance in blocks that decorative coils can connect to each other [range: 1 ~ 2147483647, default: 12]
     I:maxDecoCoilRange=12
 
@@ -52,12 +55,23 @@ machines {
     # Set to false to disable the Grindstone enchanting tools and weapons [default: true]
     B:allowGrinderEnchanting=true
 
+    # Average RF/t output of the Core Conversion Dynamo [range: 0 ~ 6000, default: 120]
+    I:averageCoreGeneratorOutput=120
+
+    # RF/t output of the Electric Dynamo [range: 0 ~ 600, default: 30]
+    I:batteryGeneratorOutput=30
+
     # Add extra ores to the Terraneous Extractor table according to their Ore Dict entry and weight. Coal ore has weight 2.0, Diamond has weight 0.1. Example: oreTin:1.5 [default: ]
     S:deepDrillCustomOres <
      >
 
     # Set to true to allow the Mob Disassembler to attack players [default: false]
     B:disassemblePlayers=false
+
+    # Full names of Tile Entities to be ignored by the Universal Supercharger. [default: [dalapo.factech.tileentity.specialized.TileEntityEnergizer]]
+    S:energizerBlacklist <
+        dalapo.factech.tileentity.specialized.TileEntityEnergizer
+     >
 
     # Maximum stack size for parts [range: 1 ~ 64, default: 4]
     I:maxPartStackSize=4
