--- a/config/plustic.cfg
+++ b/config/plustic.cfg
@@ -61,6 +61,15 @@ materials {
     # Set to false to prevent Nickel from being loaded [default: true]
     B:"Enable material nickel"=true
 
+    # Set to false to prevent Osgloglas from being loaded [default: true]
+    B:"Enable material osgloglas"=true
+
+    # Set to false to prevent Osmiridium from being loaded [default: true]
+    B:"Enable material osmiridium"=true
+
+    # Set to false to prevent Osmium from being loaded [default: true]
+    B:"Enable material osmium"=true
+
     # Set to false to prevent Peridot from being loaded [default: true]
     B:"Enable material peridot"=true
 
@@ -72,6 +81,12 @@ materials {
 
     # Set to false to prevent Psimetal from being loaded [default: true]
     B:"Enable material psimetal"=true
+
+    # Set to false to prevent Refined Glowstone from being loaded [default: true]
+    B:"Enable material refinedglowstone"=true
+
+    # Set to false to prevent Refined Obsidian from being loaded [default: true]
+    B:"Enable material refinedobsidian"=true
 
     # Set to false to prevent Ruby from being loaded [default: true]
     B:"Enable material ruby"=true
