Disabled generation of Terraqueous burnium/endimium

--- a/config/terraqueous.cfg
+++ b/config/terraqueous.cfg
@@ -27,7 +27,7 @@ general {
 
         # Adds: Breakable ground objects
         # IDs: doodads
-        B:addDoodads=true
+        B:addDoodads=false
 
         # Adds: An Enchanting Table that uses EnderPowder, and an EnderMonocle to read from it
         # IDs: ender_table, ender_monocle
