Disabled several Thermal Foundation items

--- a/config/cofh/thermalfoundation/common.cfg
+++ b/config/cofh/thermalfoundation/common.cfg
@@ -21,7 +21,7 @@ Equipment {
     B:DisableAllFishingRods=false
 
     # If TRUE, recipes for all new Shears will be disabled, leaving only the Vanilla (Iron) Shears. [default: false]
-    B:DisableAllShears=false
+    B:DisableAllShears=true
 
     # If TRUE, recipes for all new Shields will be disabled, leaving only the Vanilla (Wood) Shield [default: false]
     B:DisableAllShields=false
@@ -129,13 +129,13 @@ Equipment {
             B:Axe=true
             B:Bow=true
             B:FishingRod=true
-            B:Hammer=true
+            B:Hammer=false
             B:Hoe=true
             B:Pickaxe=true
             B:Shears=true
             B:Shield=true
             B:Shovel=true
-            B:Sickle=true
+            B:Sickle=false
             B:Sword=true
         }
 
@@ -143,13 +143,13 @@ Equipment {
             B:Axe=true
             B:Bow=true
             B:FishingRod=true
-            B:Hammer=true
+            B:Hammer=false
             B:Hoe=true
             B:Pickaxe=true
             B:Shears=true
             B:Shield=true
             B:Shovel=true
-            B:Sickle=true
+            B:Sickle=false
             B:Sword=true
         }
 
@@ -182,20 +182,6 @@ Equipment {
         }
 
         Aluminum {
-            B:Axe=true
-            B:Bow=true
-            B:FishingRod=true
-            B:Hammer=true
-            B:Hoe=true
-            B:Pickaxe=true
-            B:Shears=true
-            B:Shield=true
-            B:Shovel=true
-            B:Sickle=true
-            B:Sword=true
-        }
-
-        Nickel {
             B:Axe=false
             B:Bow=false
             B:FishingRod=false
@@ -207,6 +193,20 @@ Equipment {
             B:Shovel=false
             B:Sickle=false
             B:Sword=false
+        }
+
+        Nickel {
+            B:Axe=true
+            B:Bow=true
+            B:FishingRod=true
+            B:Hammer=true
+            B:Hoe=true
+            B:Pickaxe=true
+            B:Shears=true
+            B:Shield=true
+            B:Shovel=true
+            B:Sickle=true
+            B:Sword=true
         }
 
         Platinum {
@@ -227,13 +227,13 @@ Equipment {
             B:Axe=true
             B:Bow=true
             B:FishingRod=true
-            B:Hammer=true
+            B:Hammer=false
             B:Hoe=true
             B:Pickaxe=true
             B:Shears=true
             B:Shield=true
             B:Shovel=true
-            B:Sickle=true
+            B:Sickle=false
             B:Sword=true
         }
 
@@ -241,13 +241,13 @@ Equipment {
             B:Axe=true
             B:Bow=true
             B:FishingRod=true
-            B:Hammer=true
+            B:Hammer=false
             B:Hoe=true
             B:Pickaxe=true
             B:Shears=true
             B:Shield=true
             B:Shovel=true
-            B:Sickle=true
+            B:Sickle=false
             B:Sword=true
         }
 
@@ -269,13 +269,13 @@ Equipment {
             B:Axe=true
             B:Bow=true
             B:FishingRod=true
-            B:Hammer=true
+            B:Hammer=false
             B:Hoe=true
             B:Pickaxe=true
             B:Shears=true
             B:Shield=true
             B:Shovel=true
-            B:Sickle=true
+            B:Sickle=false
             B:Sword=true
         }
 
@@ -315,27 +315,27 @@ Equipment {
         Iron {
             B:Bow=true
             B:FishingRod=true
-            B:Hammer=true
+            B:Hammer=false
             B:Shield=true
-            B:Sickle=true
+            B:Sickle=false
         }
 
         Diamond {
             B:Bow=true
             B:FishingRod=true
-            B:Hammer=true
+            B:Hammer=false
             B:Shears=true
             B:Shield=true
-            B:Sickle=true
+            B:Sickle=false
         }
 
         Gold {
             B:Bow=true
             B:FishingRod=true
-            B:Hammer=true
+            B:Hammer=false
             B:Shears=true
             B:Shield=true
-            B:Sickle=true
+            B:Sickle=false
         }
 
     }
@@ -456,16 +456,16 @@ General {
 Items {
 
     HorseArmor {
-        B:Aluminum=true
+        B:Aluminum=false
         B:Bronze=true
-        B:Constantan=true
+        B:Constantan=false
         B:Copper=true
-        B:Electrum=true
+        B:Electrum=false
         B:Invar=true
-        B:Lead=true
+        B:Lead=false
         B:Nickel=true
-        B:Platinum=true
-        B:Silver=true
+        B:Platinum=false
+        B:Silver=false
         B:Steel=true
         B:Tin=true
     }
