Disabled Thermal Foundation electrum tools

--- a/config/cofh/thermalfoundation/common.cfg
+++ b/config/cofh/thermalfoundation/common.cfg
@@ -238,17 +238,17 @@ Equipment {
         }
 
         Electrum {
-            B:Axe=true
-            B:Bow=true
-            B:FishingRod=true
+            B:Axe=false
+            B:Bow=false
+            B:FishingRod=false
             B:Hammer=false
-            B:Hoe=true
-            B:Pickaxe=true
-            B:Shears=true
-            B:Shield=true
-            B:Shovel=true
+            B:Hoe=false
+            B:Pickaxe=false
+            B:Shears=false
+            B:Shield=false
+            B:Shovel=false
             B:Sickle=false
-            B:Sword=true
+            B:Sword=false
         }
 
         Invar {
