--- a/config/splash.properties
+++ b/config/splash.properties
@@ -1,6 +1,6 @@
 #Splash screen properties
 #Wed Jun 27 14:51:57 CDT 2018
-background=0xFFFFFF
+background=0x72C5BE
 memoryGood=0x78CB34
 font=0x0
 barBackground=0xFFFFFF
@@ -13,5 +13,5 @@ enabled=true
 bar=0xCB3D35
 resourcePackPath=resources
 logoOffset=0
-forgeTexture=fml\:textures/gui/forge.png
+forgeTexture=fml\:textures/gui/loading-gears.gif
 fontTexture=textures/font/ascii.png
