Purged old configs

--- a/config/jei/jei.cfg
+++ b/config/jei/jei.cfg
@@ -36,7 +36,7 @@ search {
     # Search mode for Item Colors (prefix: ^)
     # [Default: disabled]
     # [Valid: [enabled, require_prefix, disabled]]
-    S:colorSearchMode=REQUIRE_PREFIX
+    S:colorSearchMode=enabled
 
     # Search mode for Creative Tab Names (prefix: %)
     # [Default: disabled]
