--- a/config/scannable.cfg
+++ b/config/scannable.cfg
@@ -162,6 +162,7 @@ general {
         oreCertusQuartz
         oreResonating
         oreOsmium
+        oreNickel
      >
 
     # Ore dictionary names of ores considered 'rare', requiring the rare ore scanner module.
