Removed XP cost from Waystones

--- a/config/Waystones.cfg
+++ b/config/Waystones.cfg
@@ -57,7 +57,7 @@ general {
     B:"Set Spawnpoint on Activation"=false
 
     # The cooldown between usages of the teleport button in seconds.
-    I:"Teleport Button Cooldown"=300
+    I:"Teleport Button Cooldown"=0
 
     # If enabled, the teleport button will only let you return to the last activated waystone, instead of allowing to choose.
     B:"Teleport Button Return Only"=true
@@ -69,13 +69,13 @@ general {
     B:"Teleport Button in GUI"=false
 
     # The cooldown between usages of the warp stone in seconds.
-    I:"Warp Stone Cooldown"=300
+    I:"Warp Stone Cooldown"=0
 
     # If enabled, the warp stone costs experience when used, based on the distance travelled.
     B:"Warp Stone Costs XP"=false
 
     # If enabled, waystones cost experience when used, based on the distance travelled.
-    B:"Waystone Costs XP"=true
+    B:"Waystone Costs XP"=false
 }
 
 
