Fixed some alias issues with the Morph O Tool

--- a/config/morphtool.cfg
+++ b/config/morphtool.cfg
@@ -12,6 +12,13 @@ general {
         thermaldynamics=thermalfoundation
         thermalcultivation=thermalfoundation
         rftoolsdim=rftools
+	rftoolspower=rftools
+	buildcrafttransport=buildcraft
+	buildcraftfactory=buildcraft
+	buildcraftsilicon=buildcraft
+	immersivepetroleum=immersiveengineering
+	engineersdoors=immersivenegineering
+	immersivetech=immersiveengineering
      >
     B:"Morph in the offhand instead of mainhand"=false
     S:"Whitelisted Items" <
