Disabled aluminum/electrum TF gear, enabled nickel

--- a/config/cofh/thermalfoundation/common.cfg
+++ b/config/cofh/thermalfoundation/common.cfg
@@ -66,17 +66,17 @@ Equipment {
         }
 
         Aluminum {
-            B:Boots=true
-            B:Chestplate=true
-            B:Helmet=true
-            B:Leggings=true
-        }
-
-        Nickel {
             B:Boots=false
             B:Chestplate=false
             B:Helmet=false
             B:Leggings=false
+        }
+
+        Nickel {
+            B:Boots=true
+            B:Chestplate=true
+            B:Helmet=true
+            B:Leggings=true
         }
 
         Platinum {
@@ -94,10 +94,10 @@ Equipment {
         }
 
         Electrum {
-            B:Boots=true
-            B:Chestplate=true
-            B:Helmet=true
-            B:Leggings=true
+            B:Boots=false
+            B:Chestplate=false
+            B:Helmet=false
+            B:Leggings=false
         }
 
         Invar {
@@ -252,17 +252,17 @@ Equipment {
         }
 
         Invar {
-            B:Axe=false
-            B:Bow=false
-            B:FishingRod=false
-            B:Hammer=false
-            B:Hoe=false
-            B:Pickaxe=false
-            B:Shears=false
-            B:Shield=false
-            B:Shovel=false
-            B:Sickle=false
-            B:Sword=false
+            B:Axe=true
+            B:Bow=true
+            B:FishingRod=true
+            B:Hammer=true
+            B:Hoe=true
+            B:Pickaxe=true
+            B:Shears=true
+            B:Shield=true
+            B:Shovel=true
+            B:Sickle=true
+            B:Sword=true
         }
 
         Bronze {
