--- a/config/mystcraft/symbols.cfg
+++ b/config/mystcraft/symbols.cfg
@@ -153,7 +153,7 @@ symbol {
         B:colorwater.enabled=true
         B:colorwaternat.enabled=true
         B:cryform.enabled=true
-        B:denseores.enabled=true
+        B:denseores.enabled=false
         B:dungeons.enabled=true
         B:envaccel.enabled=true
         B:envexplosions.enabled=true
