--- a/config/mystcraft/symbols.cfg
+++ b/config/mystcraft/symbols.cfg
@@ -265,12 +265,12 @@ symbol {
     forestry {
         B:modmat_fluid.bio.ethanol_0.enabled=false
         B:modmat_fluid.biomass_0.enabled=false
-        B:modmat_fluid.for.honey_0.enabled=true
-        B:modmat_fluid.glass_0.enabled=true
+        B:modmat_fluid.for.honey_0.enabled=false
+        B:modmat_fluid.glass_0.enabled=false
         B:modmat_fluid.ice_0.enabled=true
-        B:modmat_fluid.juice_0.enabled=true
-        B:modmat_fluid.milk_0.enabled=true
-        B:modmat_fluid.seed.oil_0.enabled=true
+        B:modmat_fluid.juice_0.enabled=false
+        B:modmat_fluid.milk_0.enabled=false
+        B:modmat_fluid.seed.oil_0.enabled=false
         B:modmat_fluid.short.mead_0.enabled=true
     }
 
@@ -709,12 +709,12 @@ symbol {
         B:modmat_plustic.molten_elementium_0.enabled=false
         B:modmat_plustic.molten_manasteel_0.enabled=false
         B:modmat_plustic.molten_mirion_0.enabled=false
-        B:modmat_plustic.molten_osgloglas_0.enabled=true
-        B:modmat_plustic.molten_osmiridium_0.enabled=true
-        B:modmat_plustic.molten_osmium_0.enabled=true
-        B:modmat_plustic.molten_psimetal_0.enabled=true
-        B:modmat_plustic.molten_refinedglowstone_0.enabled=true
-        B:modmat_plustic.molten_refinedobsidian_0.enabled=true
+        B:modmat_plustic.molten_osgloglas_0.enabled=false
+        B:modmat_plustic.molten_osmiridium_0.enabled=false
+        B:modmat_plustic.molten_osmium_0.enabled=false
+        B:modmat_plustic.molten_psimetal_0.enabled=false
+        B:modmat_plustic.molten_refinedglowstone_0.enabled=false
+        B:modmat_plustic.molten_refinedobsidian_0.enabled=false
         B:modmat_plustic.molten_terrasteel_0.enabled=false
     }
 
@@ -733,90 +733,85 @@ symbol {
     }
 
     rustic {
-        B:modmat_ale_wort_0.enabled=true
-        B:modmat_apple_juice_0.enabled=true
-        B:modmat_grape_juice_0.enabled=true
-        B:modmat_honey_0.enabled=true
-        B:modmat_ironberry_juice_0.enabled=true
-        B:modmat_olive_oil_0.enabled=true
-        B:modmat_wildberry_juice_0.enabled=true
+        B:modmat_ale_wort_0.enabled=false
+        B:modmat_apple_juice_0.enabled=false
+        B:modmat_grape_juice_0.enabled=false
+        B:modmat_honey_0.enabled=false
+        B:modmat_ironberry_juice_0.enabled=false
+        B:modmat_olive_oil_0.enabled=false
+        B:modmat_wildberry_juice_0.enabled=false
     }
 
     tconstruct {
         B:modmat_blood_0.enabled=true
-        B:modmat_blueslime_0.enabled=true
-        B:modmat_molten_alubrass_0.enabled=true
-        B:modmat_molten_aluminum_0.enabled=true
-        B:modmat_molten_ardite_0.enabled=true
-        B:modmat_molten_brass_0.enabled=true
-        B:modmat_molten_bronze_0.enabled=true
+        B:modmat_blueslime_0.enabled=false
+        B:modmat_molten_alubrass_0.enabled=false
+        B:modmat_molten_aluminum_0.enabled=false
+        B:modmat_molten_ardite_0.enabled=false
+        B:modmat_molten_brass_0.enabled=false
+        B:modmat_molten_bronze_0.enabled=false
         B:modmat_molten_clay_0.enabled=true
-        B:modmat_molten_cobalt_0.enabled=true
-        B:modmat_molten_copper_0.enabled=true
-        B:modmat_molten_dirt_0.enabled=true
-        B:modmat_molten_electrum_0.enabled=true
-        B:modmat_molten_enderium_0.enabled=true
-        B:modmat_molten_gold_0.enabled=true
-        B:modmat_molten_invar_0.enabled=true
-        B:modmat_molten_iridium_0.enabled=true
-        B:modmat_molten_iron_0.enabled=true
-        B:modmat_molten_knightslime_0.enabled=true
-        B:modmat_molten_lead_0.enabled=true
-        B:modmat_molten_lumium_0.enabled=true
-        B:modmat_molten_manyullyn_0.enabled=true
-        B:modmat_molten_nickel_0.enabled=true
-        B:modmat_molten_obsidian_0.enabled=true
-        B:modmat_molten_pigiron_0.enabled=true
-        B:modmat_molten_platinum_0.enabled=true
-        B:modmat_molten_signalum_0.enabled=true
-        B:modmat_molten_silver_0.enabled=true
-        B:modmat_molten_steel_0.enabled=true
-        B:modmat_molten_stone_0.enabled=true
-        B:modmat_molten_tin_0.enabled=true
-        B:modmat_molten_zinc_0.enabled=true
-        B:modmat_purpleslime_0.enabled=true
-    }
-
-    immersivetech {
-        B:modmat_fluiddistwater_0.enabled=true
-        B:modmat_fluidsteam_0.enabled=true
+        B:modmat_molten_cobalt_0.enabled=false
+        B:modmat_molten_copper_0.enabled=false
+        B:modmat_molten_dirt_0.enabled=false
+        B:modmat_molten_electrum_0.enabled=false
+        B:modmat_molten_enderium_0.enabled=false
+        B:modmat_molten_gold_0.enabled=false
+        B:modmat_molten_invar_0.enabled=false
+        B:modmat_molten_iridium_0.enabled=false
+        B:modmat_molten_iron_0.enabled=false
+        B:modmat_molten_knightslime_0.enabled=false
+        B:modmat_molten_lead_0.enabled=false
+        B:modmat_molten_lumium_0.enabled=false
+        B:modmat_molten_manyullyn_0.enabled=false
+        B:modmat_molten_nickel_0.enabled=false
+        B:modmat_molten_obsidian_0.enabled=false
+        B:modmat_molten_pigiron_0.enabled=false
+        B:modmat_molten_platinum_0.enabled=false
+        B:modmat_molten_signalum_0.enabled=false
+        B:modmat_molten_silver_0.enabled=false
+        B:modmat_molten_steel_0.enabled=false
+        B:modmat_molten_stone_0.enabled=false
+        B:modmat_molten_tin_0.enabled=false
+        B:modmat_molten_zinc_0.enabled=false
+        B:modmat_purpleslime_0.enabled=false
     }
 
     charcoal_pit {
-        B:modmat_block_fluid_creosote_0.enabled=true
+        B:modmat_block_fluid_creosote_0.enabled=false
     }
 
     buildcraftenergy {
-        B:modmat_fluid_block_fuel_dense_heat_0_0.enabled=true
-        B:modmat_fluid_block_fuel_dense_heat_1_0.enabled=true
-        B:modmat_fluid_block_fuel_dense_heat_2_0.enabled=true
-        B:modmat_fluid_block_fuel_gaseous_heat_0_0.enabled=true
-        B:modmat_fluid_block_fuel_gaseous_heat_1_0.enabled=true
-        B:modmat_fluid_block_fuel_gaseous_heat_2_0.enabled=true
-        B:modmat_fluid_block_fuel_light_heat_0_0.enabled=true
-        B:modmat_fluid_block_fuel_light_heat_1_0.enabled=true
-        B:modmat_fluid_block_fuel_light_heat_2_0.enabled=true
-        B:modmat_fluid_block_fuel_mixed_heavy_heat_0_0.enabled=true
-        B:modmat_fluid_block_fuel_mixed_heavy_heat_1_0.enabled=true
-        B:modmat_fluid_block_fuel_mixed_heavy_heat_2_0.enabled=true
-        B:modmat_fluid_block_fuel_mixed_light_heat_0_0.enabled=true
-        B:modmat_fluid_block_fuel_mixed_light_heat_1_0.enabled=true
-        B:modmat_fluid_block_fuel_mixed_light_heat_2_0.enabled=true
-        B:modmat_fluid_block_oil_dense_heat_0_0.enabled=true
-        B:modmat_fluid_block_oil_dense_heat_1_0.enabled=true
-        B:modmat_fluid_block_oil_dense_heat_2_0.enabled=true
-        B:modmat_fluid_block_oil_distilled_heat_0_0.enabled=true
-        B:modmat_fluid_block_oil_distilled_heat_1_0.enabled=true
-        B:modmat_fluid_block_oil_distilled_heat_2_0.enabled=true
-        B:modmat_fluid_block_oil_heat_0_0.enabled=true
-        B:modmat_fluid_block_oil_heat_1_0.enabled=true
-        B:modmat_fluid_block_oil_heat_2_0.enabled=true
-        B:modmat_fluid_block_oil_heavy_heat_0_0.enabled=true
-        B:modmat_fluid_block_oil_heavy_heat_1_0.enabled=true
-        B:modmat_fluid_block_oil_heavy_heat_2_0.enabled=true
-        B:modmat_fluid_block_oil_residue_heat_0_0.enabled=true
-        B:modmat_fluid_block_oil_residue_heat_1_0.enabled=true
-        B:modmat_fluid_block_oil_residue_heat_2_0.enabled=true
+        B:modmat_fluid_block_fuel_dense_heat_0_0.enabled=false
+        B:modmat_fluid_block_fuel_dense_heat_1_0.enabled=false
+        B:modmat_fluid_block_fuel_dense_heat_2_0.enabled=false
+        B:modmat_fluid_block_fuel_gaseous_heat_0_0.enabled=false
+        B:modmat_fluid_block_fuel_gaseous_heat_1_0.enabled=false
+        B:modmat_fluid_block_fuel_gaseous_heat_2_0.enabled=false
+        B:modmat_fluid_block_fuel_light_heat_0_0.enabled=false
+        B:modmat_fluid_block_fuel_light_heat_1_0.enabled=false
+        B:modmat_fluid_block_fuel_light_heat_2_0.enabled=false
+        B:modmat_fluid_block_fuel_mixed_heavy_heat_0_0.enabled=false
+        B:modmat_fluid_block_fuel_mixed_heavy_heat_1_0.enabled=false
+        B:modmat_fluid_block_fuel_mixed_heavy_heat_2_0.enabled=false
+        B:modmat_fluid_block_fuel_mixed_light_heat_0_0.enabled=false
+        B:modmat_fluid_block_fuel_mixed_light_heat_1_0.enabled=false
+        B:modmat_fluid_block_fuel_mixed_light_heat_2_0.enabled=false
+        B:modmat_fluid_block_oil_dense_heat_0_0.enabled=false
+        B:modmat_fluid_block_oil_dense_heat_1_0.enabled=false
+        B:modmat_fluid_block_oil_dense_heat_2_0.enabled=false
+        B:modmat_fluid_block_oil_distilled_heat_0_0.enabled=false
+        B:modmat_fluid_block_oil_distilled_heat_1_0.enabled=false
+        B:modmat_fluid_block_oil_distilled_heat_2_0.enabled=false
+        B:modmat_fluid_block_oil_heat_0_0.enabled=false
+        B:modmat_fluid_block_oil_heat_1_0.enabled=false
+        B:modmat_fluid_block_oil_heat_2_0.enabled=false
+        B:modmat_fluid_block_oil_heavy_heat_0_0.enabled=false
+        B:modmat_fluid_block_oil_heavy_heat_1_0.enabled=false
+        B:modmat_fluid_block_oil_heavy_heat_2_0.enabled=false
+        B:modmat_fluid_block_oil_residue_heat_0_0.enabled=false
+        B:modmat_fluid_block_oil_residue_heat_1_0.enabled=false
+        B:modmat_fluid_block_oil_residue_heat_2_0.enabled=false
     }
 
     colored_water {
@@ -855,22 +850,22 @@ symbol {
     }
 
     contenttweaker {
-        B:modmat_crude_steel_0.enabled=true
-        B:modmat_irradiated_blood_0.enabled=true
-        B:modmat_monster_essence_0.enabled=true
-        B:modmat_un_precipitated_molten_gold_0.enabled=true
-        B:modmat_unrefined_molten_iron_0.enabled=true
+        B:modmat_crude_steel_0.enabled=false
+        B:modmat_irradiated_blood_0.enabled=false
+        B:modmat_monster_essence_0.enabled=false
+        B:modmat_un_precipitated_molten_gold_0.enabled=false
+        B:modmat_unrefined_molten_iron_0.enabled=false
     }
 
     factorytech {
-        B:modmat_h2so4_0.enabled=true
+        B:modmat_h2so4_0.enabled=false
     }
 
     immersivepetroleum {
-        B:modmat_fluid_diesel_0.enabled=true
-        B:modmat_fluid_gasoline_0.enabled=true
-        B:modmat_fluid_lubricant_0.enabled=true
-        B:modmat_fluid_napalm_0.enabled=true
+        B:modmat_fluid_diesel_0.enabled=false
+        B:modmat_fluid_gasoline_0.enabled=false
+        B:modmat_fluid_lubricant_0.enabled=false
+        B:modmat_fluid_napalm_0.enabled=false
     }
 
 }
