Changed background color

--- a/config/splash.properties
+++ b/config/splash.properties
@@ -1,6 +1,6 @@
 #Splash screen properties
-#Wed Jun 27 14:51:57 CDT 2018
-background=0x72C5BE
+#Thu Jul 12 11:00:47 CDT 2018
+background=0x919191
 memoryGood=0x78CB34
 font=0x0
 barBackground=0xFFFFFF
@@ -9,8 +9,8 @@ memoryLow=0xE42F2F
 rotate=false
 memoryWarn=0xE6E84A
 showMemory=true
-enabled=true
 bar=0xCB3D35
+enabled=true
 resourcePackPath=resources
 logoOffset=0
 forgeTexture=fml\:textures/gui/loading-gears.gif
