Disabled Terraqueous worldgen in aether

--- a/config/terraqueous.cfg
+++ b/config/terraqueous.cfg
@@ -933,18 +933,23 @@ general {
         dim_blacklist {
             S:clouds <
                 simplevoidworld
+		AetherI
              >
             S:doodads <
                 simplevoidworld
+		AetherI
              >
             S:flowers <
                 simplevoidworld
+		AetherI
              >
             S:plants <
                 simplevoidworld
+		AetherI
              >
             S:trees <
                 simplevoidworld
+		AetherI
              >
         }
 
