Updated Buildcraft oil biome blacklist

--- a/config/buildcraft/main.cfg
+++ b/config/buildcraft/main.cfg
@@ -143,34 +143,31 @@ worldgen {
         randomthings:spectral
         appliedenergistics2:storage_biome
         integrateddynamics:biome_meneglin
-        nex:hell
-        nex:ruthless_sands
-        nex:fungi_forest
-        nex:torrid_wasteland
-        nex:arctic_abyss
         nuclearcraft:nuclear_wasteland
         rockhounding_surface:white_sands
-        traverse:autumnal_woods
-        traverse:woodlands
-        traverse:mini_jungle
-        traverse:meadow
-        traverse:green_swamp
-        traverse:red_desert
-        traverse:temperate_rainforest
-        traverse:badlands
-        traverse:mountainous_desert
-        traverse:rocky_plateau
-        traverse:forested_hills
-        traverse:birch_forested_hills
-        traverse:autumnal_wooded_hills
-        traverse:cliffs
-        traverse:glacier
-        traverse:glacier_spikes
-        traverse:snowy_coniferous_forest
-        traverse:lush_hills
-        traverse:canyon
-        traverse:crag_cliffs
-        aroma1997sdimension:miningbiome
+	traverse:autumnal_woods           
+	traverse:woodlands
+	traverse:mini_jungle
+	traverse:meadow
+	traverse:green_swamp
+	traverse:red_desert
+	traverse:temperate_rainforest
+	traverse:badlands
+	traverse:mountainous_desert
+	traverse:rocky_plateau
+	traverse:forested_hills
+	traverse:birch_forested_hills
+	traverse:autumnal_wooded_hills
+	traverse:cliffs
+	traverse:glacier
+	traverse:glacier_spikes
+	traverse:snowy_coniferous_forest
+	traverse:lush_hills
+	traverse:canyon
+	traverse:crag_cliffs
+	traverse:desert_shrubland
+	traverse:thicket
+	traverse:arid_highland
         minecraft:void
         minecraft:mutated_plains
         minecraft:mutated_desert
@@ -193,6 +190,7 @@ worldgen {
         minecraft:mutated_mesa
         minecraft:mutated_mesa_rock
         minecraft:mutated_mesa_clear_rock
+	aether_legacy:aether_highlands
      >
 
     # Dimension ID's (e.g. '-1' for the nether,'1' for the end) of dimensions that should never generate oil.
